--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,3 +1,3 @@
 .form-control {
-	@apply border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm;
+	@apply focus:ring-indigo-500 focus:border-indigo-500 shadow-sm sm:text-sm border-gray-300 rounded-md;
 }
