--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33381,7 +33381,7 @@ select {
 
 .form-control:focus {
   --tw-border-opacity: 1;
-  border-color: rgba(165, 180, 252, var(--tw-border-opacity));
+  border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }
 
 .form-control {
@@ -33391,12 +33391,15 @@ select {
 }
 
 .form-control:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgba(199, 210, 254, var(--tw-ring-opacity));
-  --tw-ring-opacity: 0.5;
+  --tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
+}
+
+@media (min-width: 640px) {
+  .form-control {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 .btn {
