--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,3 +1,11 @@
 .bg-red-500 {
     background-color: #EF4444;
 }
+
+.border-1 {
+    border: 5px solid aqua;
+}
+
+.fila {
+    background-color: gainsboro;
+}
